--- a/client/package.json
+++ b/client/package.json
@@ -7,42 +7,47 @@
     "dev": "vite --port 5174",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "vite preview",
+    "format:check": "prettier --check .",
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "@dojoengine/core": "1.0.13",
-    "@dojoengine/create-burner": "1.0.13",
-    "@dojoengine/predeployed-connector": "1.0.13",
-    "@dojoengine/sdk": "1.0.13",
-    "@dojoengine/torii-client": "1.0.13",
-    "@dojoengine/torii-wasm": "1.0.13",
-    "@dojoengine/utils": "1.0.13",
+    "@cartridge/connector": "0.5.9",
+    "@cartridge/controller": "0.5.9",
+    "@dojoengine/core": "1.2.1",
+    "@dojoengine/create-burner": "1.2.1",
+    "@dojoengine/predeployed-connector": "1.2.1",
+    "@dojoengine/sdk": "1.2.1",
+    "@dojoengine/torii-client": "1.2.1",
+    "@dojoengine/torii-wasm": "1.2.1",
+    "@dojoengine/utils": "1.2.1",
     "@starknet-react/chains": "^3.1.0",
-    "@starknet-react/core": "^3.6.2",
+    "@starknet-react/core": "^3.5.0",
     "@types/uuid": "^10.0.0",
     "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "starknet": "6.21.0",
+    "starknet": "6.11.0",
     "uuid": "^10.0.0",
-    "vite-plugin-top-level-await": "^1.4.4",
-    "vite-plugin-wasm": "^3.3.0",
-    "zustand": "^4.5.5"
+    "vite-plugin-top-level-await": "^1.5.0",
+    "vite-plugin-wasm": "^3.4.1",
+    "zustand": "^4.5.6"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
-    "@types/react": "^18.3.9",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@eslint/js": "^9.20.0",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.11.1",
+    "eslint": "^9.20.1",
     "eslint-plugin-react-hooks": "5.1.0-rc-fb9a90fa48-20240614",
-    "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.7"
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.1",
+    "vite": "^5.4.14"
   }
 }
