--- a/client/package.json
+++ b/client/package.json
@@ -22,13 +22,19 @@
     "@dojoengine/torii-client": "1.2.1",
     "@dojoengine/torii-wasm": "1.2.1",
     "@dojoengine/utils": "1.2.1",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@starknet-react/chains": "^3.1.0",
     "@starknet-react/core": "^3.5.0",
     "@types/uuid": "^10.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "immer": "^10.1.1",
+    "lucide-react": "^0.512.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "starknet": "6.11.0",
+    "tailwind-merge": "^3.3.0",
     "uuid": "^10.0.0",
     "vite-plugin-top-level-await": "^1.5.0",
     "vite-plugin-wasm": "^3.4.1",
