--- a/client/.env.example
+++ b/client/.env.example
@@ -6,6 +6,9 @@ VITE_PUBLIC_MASTER_ADDRESS=YOUR_MASTER_ADDRESS
 VITE_PUBLIC_MASTER_PRIVATE_KEY=YOUR_MASTER_PRIVATE_KEY
 VITE_PUBLIC_SLOT_ADDRESS=YOUR_KATANA_ADDRESS
 
+# Local HTTPS
+VITE_LOCAL_HTTPS=YOUR_LOCAL_HTTPS # true or false
+
 # PostHog Config
 VITE_POSTHOG_API_KEY="YOUR__POSTHOG_KEY"
 VITE_POSTHOG_HOST="YOUR_HOST"
