Update client and contract setup instructions

--- a/client/.env.development
+++ b/client/.env.development
@@ -1,13 +1,13 @@
 # Deploy Environment Variables
-VITE_PUBLIC_DEPLOY_TYPE=DEPLOY_TYPE
-VITE_PUBLIC_NODE_URL=RPC_URL
-VITE_PUBLIC_TORII=TORII_URL
+VITE_PUBLIC_DEPLOY_TYPE=sepolia
+VITE_PUBLIC_NODE_URL=https://api.cartridge.gg/x/starknet/sepolia
+VITE_PUBLIC_TORII=https://api.cartridge.gg/x/full-starter-react/torii
 VITE_PUBLIC_MASTER_ADDRESS=DEPLOYER_ACCOUNT_ADDRESS
 VITE_PUBLIC_MASTER_PRIVATE_KEY=DEPLOYER_PRIVATE_KEY
 VITE_PUBLIC_SLOT_ADDRESS=KATANA_ADDRESS
 
 # Local HTTPS flag
-VITE_LOCAL_HTTPS=HTTPS_FLAG
+VITE_LOCAL_HTTPS=true
 
 # PostHog Config
 VITE_POSTHOG_API_KEY=POSTHOG_KEY
