--- a/client/package.json
+++ b/client/package.json
@@ -60,6 +60,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "vite-plugin-mkcert": "^1.17.8"
   }
 }
