--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.518.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.2",
     "starknet": "^6.23.1",
     "tailwind-merge": "^3.3.1",
     "uuid": "^10.0.0",
@@ -50,6 +51,7 @@
     "@types/node": "^22.15.32",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
