--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,10 @@
     "@dojoengine/torii-client": "^1.5.14",
     "@dojoengine/torii-wasm": "^1.5.14",
     "@dojoengine/utils": "^1.5.14",
+    "@metamask/sdk": "^0.33.0",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@solana/web3.js": "^1.98.2",
     "@starknet-react/chains": "^3.1.3",
     "@starknet-react/core": "^3.7.4",
     "@types/uuid": "^10.0.0",
@@ -40,6 +42,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.2",
     "starknet": "^6.23.1",
+    "starknetkit": "^2.10.4",
     "tailwind-merge": "^3.3.1",
     "uuid": "^10.0.0",
     "vite-plugin-top-level-await": "^1.5.0",
