Improve UI and add animations

--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "immer": "^10.1.1",
     "lucide-react": "^0.518.0",
     "react": "^18.3.1",
